--- a/_posts/2024-12-25-LTN做题.md
+++ b/_posts/2024-12-25-LTN做题.md
@@ -13,6 +13,37 @@ typora-root-url: ..
 
 # LTN做题
 
+>LTN ①③ - 错题 28题
+
+❌作业58：React和Vue是怎么描述UI的
+❌作业62：fiber架构是什么？优点有哪些？ 是怎么实现的？
+❌作业63：React渲染怎么实现的？涉及到哪些生命周期/hooks？以 const [count, setCount]=useState(0)说明
+❌作业64：Vue渲染怎么实现的？
+❌作业65： ①computed/watch/methods 的区别？ ②父子组件挂载顺序 ③vue组件中的data为什么是函数 ④ 常见生命周期
+❌作业66：React如何处理错误
+❌作业67：React 怎么做的性能优化？
+❌作业68：React hooks 的原理是什么？useEffect useState模拟实现
+❌作业70：Vue 和 React 的 Diff 算法比较
+❌作业71：React为什么要合成事件？和原生事件有什么不同？
+❌作业72：react 的 声明周期有哪些，在不同生命周期中做什么事情？
+❌作业78：使一个标签看不见的几种样式及其区别
+❌2024.12 模拟实现promise
+❌2024.11 观察者模式 EventEmitter
+❌2022.08 包管理工具
+❌2024.09 第八章 对象、类和面向对象编程 小结
+❌2024.11 第十七章 事件
+❌作业47：2D绘图上下文（坐标原点、基本操作、唯一形状）和3D上下文（坐标原点、定义视口）
+❌作业53：胜利者一无所获 说的是什么
+❌2024.10 怎么实现跨域
+❌2021.07 bind、apply/call三者异同+apply/call实现bind
+❌2021.07 数组扁平化（一层、全部展开、指定深度）
+❌2021.04 05-3 白屏优化？
+❌作业13：什么是原型链？原型链继承、组合继承、寄生组合式继承，分别有什么优缺点？分别是怎么实现的
+❌2024.05 rem是基于什么原理进行适配的？
+❌2020.07 对象分类、Promise按序执行、实现map
+❌2019.10 两栏，左边固定，右边自适应的布局
+❌2019.10 三栏，两边固定，中间自适应
+
 > LTN ①③ - 76题
 
 2025.1.7 开始
@@ -750,11 +781,9 @@ MyPromise.race = function (arr) {
 
 ```js
 // 作业78：使一个标签看不见的几种样式及其区别
-display: none; 不占位，直接移除 DOM 节点 v-if
-❌ // 1、display:none 不占位，元素仍在 DOM 中，会触发回流+重绘； v-if 移除了 DOM 节点
+display: none; 不占位，直接移除 DOM 节点 v-if ❌ // 1、元素仍在 DOM 中，会触发回流+重绘； v-if 移除了 DOM 节点
 opacity: 0; 依旧占位，但是透明、看不见节点，绑定的事件依旧可以触发 
-visibility: hidden; 不占位，DOM 节点还在，但是看不见节点，绑定的事件无法触发 v-show
-❌ // 2、visibility: hidden 依旧占位，不影响结构，会触发重绘
+visibility: hidden; 不占位，DOM 节点还在，但是看不见节点，绑定的事件无法触发 v-show ❌ // 2、依旧占位，不影响结构，会触发重绘
 ```
 
 ```js
@@ -1238,8 +1267,7 @@ mounted时，DOM已经更新到真实 DOM，可以访问/操作DOM了✅
 generate：通过词法解析、语法解析将模板转换成AST
 optimize：遍历AST，标记静态节点，方便后续Diff时跳过
 render：将AST转换成render函数字符串
-2、将js代码进行双向绑定—数据劫持和发布订阅
-  首次渲染的时候，通过getter/proxy劫持，进行自定义 ❌❌❌ // 1、getter 被劫持是结果，「劫持方式是 Object.defineProperty(target, property, {get:()=>{}, set:()=>{}})」/Proxy
+2、将js代码进行双向绑定—数据劫持和发布订阅过getter/proxy劫持，进行自定义 ❌❌❌ // 1、getter 被劫持是结果，「劫持方式是 Object.defineProperty(target, property, {get:()=>{}, set:()=>{}})」/Proxy
   在Dep中存储正在进行中的Watcher（确认下Dep的结构是不是以变量为key，所有订阅的Watcher为值的格式
 ❌❌❌ // 2、「每一个响应式对象属性都会创建一个对应的 Dep 类的实例」 -> 我写的这里理解有误，同时数据劫持之后，触发订阅的时机是「渲染组件，实例化 Watcher 时，执行到 getter 触发对应的 Dep 收集正在执行的 Watcher」
   等调用setter/proxy赋值时，通知在Dep中所有订阅的Watcher，即执行 dep.notify()
