add: J-Table 需求梳理 + LTN下周期题目梳理

--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -29,9 +29,32 @@ typora-root-url: ..
 
 ##### 2025.1.15 进展
 
-日报落表 - 时间周期落表
+Next_Pro 日报落表 - 时间周期落表
 
 <img src="/img/assets_2023/dailytable.png" alt="image-20250115202239765" style="zoom:35%;" />
+
+##### 2025.1.17 进展
+
+J-Table 后端接口需求梳理：
+
+```js
+表
+CREATE TABLE `ltn_data` (
+  `id` BIGINT NOT NULL AUTO_INCREMENT,
+  `title` varchar(255) NOT NULL COMMENT '题目标题',
+  `source` BIGINT NOT NULL COMMENT '题目来源作业/博客',
+  `box_id` BIGINT NOT NULL COMMENT '归属box',
+  `solve_time` TIME NOT NULL COMMENT '做题时间',
+  `created_at` datetime NOT NULL,
+  `updated_at` datetime NOT NULL,
+  PRIMARY KEY (`id`)
+) 
+接口：
+1、查询接口 /findAll 按 box_id 分组
+2、某题操作按钮 /operate 参数：id + type:upgrade[box_id+1]/degrade[box_id降为1]
+3、过滤接口 /filter 参数：startTime + endTime[solve_time+box_id*7∈[start,end]]
+建议 startTime: now endTime: now+10天(一个周期)
+```
 
 
 
