--- a/_posts/2024-12-25-LTN做题.md
+++ b/_posts/2024-12-25-LTN做题.md
@@ -13,6 +13,120 @@ typora-root-url: ..
 
 # LTN做题
 
+> LTN①④ - 
+
+LTN5 - 2题
+
+作业2：支持迭代器的原生语言特性有哪些？
+作业5：什么是生成器对象？有什么特点？什么时候会被执行？
+
+LTN3 - 11题
+
+作业43：TED 怎么提升自信
+作业42：TED 如何和大脑正确交流沟通
+作业40：写出以下值
+```js
+1、Number(null)
+2、Number(undefined)
+3、isNaN() 检测那些值为 true?
+4、Number、parseInt、parseFloat 检测 空字符串 得到?
+5、1+'2'+'2'
+1+ +'2'+'2'
+1+ -'1'+'2'
+'A'-'B'+'2'
+'A'-'B'+ 2
+6、let i = 0, age = 30;
+i++ + age;
+++i + age;
+7、 12.34 | 0;
+12.43 >> 0;
+8、null === undefined；
+```
+作业39：shim 和 polyfill 区别
+作业23：写出js 代码的执行顺序。词法作用域的特点是什么？
+```js
+function bar(){
+    console.log(myName);
+}
+function foo(){
+    var myName = 'hi 坑';
+    bar();
+}
+var myName = 'bye 坑';
+foo();
+```
+作业6：new操作符实例化一个对象的过程
+作业32：什么是队头阻塞？原因是什么？怎么解决？
+作业16（1）：箭头函数和普通函数的区别是什么？（3点）
+①2019.07 盒模型有哪些？有什么区别？
+②2019.07 为什么要清除浮动？怎么清除浮动？
+③2021.06 CSS 选择器 - 权重/匹配方式
+
+LTN2 - 10题
+
+作业17：对斐波那切数列进行尾调用优化
+作业20：浏览器打开一个 URL 发生了什么
+作业26：给出一个场景，要求A、B请求执行结束后，再执行C请求，其中A、B请求同时开始，怎么实现
+作业34：写出强缓存、协商缓存的流程及相关属性
+作业57：“假装成功”的意义是什么
+①2021.06 BFC特点、触发、存在/解决的问题
+②2020.03 改变原数组+结束循环+性能排序
+③2021.09 Object属性排序、与Map的区别
+④2021.07 防抖节流
+⑤2024.12 模拟实现jsonp
+
+LTN1  - 43题
+
+作业75：React 组件怎么写才好？hook怎么写才好
+作业36：多分支项目的大致情况
+作业37：大盘的大致情况
+作业38：部署两个项目的大致情况
+作业58：React和Vue是怎么描述UI的
+作业60：虚拟DOM在 Vue 和 React 中的使用？分别有什么提升性能的方法？
+作业62：fiber架构是什么？优点和实现方式？
+作业63：React渲染怎么实现的？涉及到哪些生命周期/hooks？以 const [count, setCount]=useState(0)具体说明
+作业64：Vue渲染怎么实现的？
+作业65： ①computed/watch/methods 的区别？ ②父子组件挂载顺序 ③vue组件中的data为什么是函数 ④ 常见生命周期
+作业66：React如何处理错误
+作业67：React 怎么做的性能优化？
+作业68：React hooks 的原理是什么？
+作业69：useEffect useState模拟实现
+作业70：Vue 和 React 的 Diff 算法比较
+作业71：React为什么要合成事件？和原生事件有什么不同？
+作业72：react 的 声明周期有哪些，在不同生命周期中做什么事情？
+作业78：使一个标签看不见的几种样式及其区别
+作业47：2D绘图上下文（坐标原点、基本操作、唯一形状）和3D上下文（坐标原点、定义视口）
+作业53：胜利者一无所获 说的是什么
+作业13：什么是原型链？原型链继承、组合继承、寄生组合式继承，分别有什么优缺点？分别是怎么实现的
+作业80：对DOM 树的理解 - 定义和作用
+作业81：Redux
+作业82：写一个复杂的 SQL： ①只返回某列不同的值，相同的忽略 ②拼接A列和B列为字符串后输出 ③将某一列转换为大写输出 ④计算某列行数，一个包含null的个数，一个不包含null个数 ⑤求和、求最大、求最小、求平均某列的值 ⑥给表起别名 ⑦查询条件涵盖 id为1,同时price大于10，或者是NULL，或者是 5-10之间，或者是 1或2，或者年份为2025 ⑧按照某列分组 ⑨按照某列排序(降序)
+作业83：INNER JOIN、LEFT OUTER JOIN、RIGHT OUTER JOIN 有什么区别?UNION作用是什么？怎么封装一个 SQL 查询
+作业84：path.join()和path.resolve()的区别？process.cwd()和__dirname的区别？
+作业85：Lambdas是什么
+作业86：Nextjs 中 Link 的变更是哪个版本开始的，有什么变更？从这个版本开始对路由有什么变更？
+作业87：Nextjs 中预渲染是什么？有哪些模式？写一个动态路由的page
+作业88：mysql2 和 Sequelize 的使用场景？有哪些差异？简单写一个连接
+①2024.12 模拟实现promise
+②2024.11 观察者模式 EventEmitter
+③2024.10 怎么实现跨域
+④2024.05 rem是基于什么原理进行适配的？
+⑤2023.07 clickhouse、mysql、mongodb异同
+⑥2022.08 包管理工具
+⑦2021.10 LTN做题
+⑧2021.07 bind、apply/call三者异同+apply/call实现bind
+⑨2021.07 数组扁平化（一层、全部展开、指定深度）
+⑩2021.04 05-3 白屏优化？
+①①2020.07 对象分类、Promise按序执行、实现map
+①②2019.10 两栏，左边固定，右边自适应的布局
+①③2019.10 三栏，两边固定，中间自适应
+
+红宝书
+
+①2024.09 第八章 对象、类和面向对象编程 小结
+②2024.11 第十七章 事件
+
+
 >LTN ①③ - 错题 28题
 
 ❌作业58：React和Vue是怎么描述UI的
