add: redux 浅学一下

--- a/_posts/react17+ts4/2025-1-18-Redux 学习笔记.md
+++ b/_posts/react17+ts4/2025-1-18-Redux 学习笔记.md
@@ -29,29 +29,29 @@ typora-root-url: ..
 
 3、将 action dispatch 给 store
 
-- reducer
+###### 拆解：reducer
 
-用途：要指定状态树怎么响应 action 来进行更新，可以使用 reducer - 从旧的state和action计算出新 state 值
+函数签名： `(preState, action) => newState  ` - 从旧的state和action计算出新 state 值
 
-函数签名： (preState, action) => newState
+用途：要指定状态树「怎么响应 action 」来进行更新，可以使用 reducer
 
--	重点：不是直接改变 state 对象，而是在 state 发生变化时「返回一个新对象」
+重点：不是直接改变 state 对象，而是在 state 发生变化时「返回一个新对象」
 
 ```react
-// 1、引入创建 redux store 的模块
-import { createStore } from 'redux';
-// 2、自定义一个 reducer
-function reducer(state={ count: 0 }, action) { 
-    if(action.type) { return { count: state.count++ } } 
+import { createStore } from 'redux'; // 引入创建 redux store 的模块
+function reducer( state = { count: 0 }, action ) { // 1、自定义一个 reducer
+    if( action.type ) { 
+        return { count: state.count++ } 
+    } 
 }
-
-// 3、利用自定义 reducer 创建一个 store，有三个 API - subscribe, dispatch, getState
-let store = createStore(reducer);
-
-// 4、改变内部状态的唯一方法是 dispatch 一个 action
-store.dispatch({ type: true });
-
-// 5、可以使用 subscribe() 来更新 UI 以响应 state 的更改
-store.subscribe(() => console.log(store.getState()));
+// store 有三个 API - subscribe, dispatch, getState
+let store = createStore(reducer); // 2、创建一个 store
+store.dispatch({ type: true });// 3、改变内部状态的唯一方法是 dispatch 一个 action
+store.subscribe(() => console.log(store.getState()));// 4、可以使用 subscribe() 来更新 UI 以响应 state 的更改
 ```
 
+###### 拆解2：action
+
+action 其实就是一个 JS 对象 - redux 的核心就是「如何根据 action 对象来更新 state」
+
+强制使用 action 可以统一管理应用中 state 的改变
