add: nextjs 13.x 版本更新主要内容

--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -66,3 +66,19 @@ CREATE TABLE `ltn_data` (
 
 
 
+##### 2025.1.20 进展
+
+LTN工具未来迭代方向：结合记忆曲线，在遗忘曲线的周期内，对知识进行回顾
+
+J-Table
+
+- 前端路由 + 莱特纳盒子
+- /ltn 查询接口，按 boxId 分组返回 + 前端侧按盒子分组展示
+- /ltn/operate 修改接口，升/降LTN内容 + 前端侧提供按钮
+- 提供过滤接口，生成当前周期的 LTN 题库
+
+##### 2025.1.21 进展
+
+Next_Pro
+
+-	日报 事项记录 前后端+数据库
