--- a/_posts/Node/2025-01-12-Nextjs 学习笔记.md
+++ b/_posts/Node/2025-01-12-Nextjs 学习笔记.md
@@ -15,7 +15,25 @@ typora-root-url: ..
 
 # Nextjs 学习笔记
 
-#### 一、导航相关
+主要侧重于 13.x 之后给出的 break change ，修正写代码过程中可能遇到的版本问题
+
+[升级指南](https://nextjscn.org/docs/app/building-your-application/upgrading/app-router-migration)
+
+总结：
+
+- Link 标签不用再写 a 标签，因为直接解析为 a 标签
+- src/app 目录下所有页面默认是 服务器组件，需要定义 客户端组件 时在顶部添加 “use client”
+- 3、自定义共享布局、样式：src/app/layout.tsx、src/app/global.css
+- 4、自动按照路由进行代码分割
+- 5、预渲染之前使用的 getStaticProps、getStaticPaths、getServerSideProps 已被 generateStaticParams + fetch 替代  -  增量静态再生（ISR）
+- 6、API Router 
+
+
+
+#### 一、导航相关 `<Link>`
+
+- app 目录中，页面默认是服务器组件；pages 目录中，页面是客户端组件
+- app 目录中，定义客户端组件需要在文件顶部添加 ‘use client’ 指令
 
 1、客户端导航：Nextjs 的前端部分提供内置的「文件系统路由」+ Link 
 
@@ -23,7 +41,7 @@ typora-root-url: ..
     - 实现了「客户端导航」的方式，浏览器不会重新加载整个页面（a标签会触发重新刷新整个页面
 - Nextjs 13.x 版本开始，「文件系统路由」从`pages/index.js`[旧方式]逐渐改为`src/app/page.tsx`[新app模式]
     - 旧方式缺点：旧方式容易上手，按文件路径即可推论路由，但复杂嵌套需要写赘余代码
-    - 新方式优点：支持自定义共享布局，在 `src/app/layout.tsx` 可自定义共享的布局(导航栏等)
+    - 新方式优点：支持 **自定义共享布局**，在 `src/app/layout.tsx` 可自定义共享的布局(导航栏等)
 
 2、代码分割：Nextjs 会自动进行
 
@@ -46,11 +64,48 @@ typora-root-url: ..
 3、全局变量
 
 - 旧方法：在 `pages/_app.js`中 import 引入全局 css 文件，利用 `_app.js` 是整个应用的顶层组件特性，`_app.js`包裹了所有页面的组件，引入的样式自然就应用到了全局
-- 新方法：`src/global.css`
+- 新方法：`src/app/global.css`
 
 
 
 #### 三、预渲染
+
+#### 13.x 以上
+
+-  新的数据获取方式：getStaticProps、getStaticPaths、getServerSideProps 已被 generateStaticParams 替代 - 只会在构建时预渲染来自 `generateStaticParams` 的参数
+    - 增量静态再生 (ISR)
+
+```js
+export const revalidate = 60 // Next.js 将在请求进来时使缓存失效，最多每 60 秒一次
+// 如果收到一个尚未生成的路径的请求，Next.js 将按需服务器渲染该页面
+export const dynamicParams = true // 或 false，对未知路径返回 404
+export async function generateStaticParams() {
+    const posts = await fetch('https://xxx/blog').then((res) => res.json())
+    return posts.map((post) => ({
+        id: String(post.id),
+    }))
+}
+export default async function Page({ params }) {
+  const post = await fetch(`https://xxx/blog/${params.id}`).then((res) => res.json())
+  return (
+    <main>
+      <h1>{post.title}</h1>
+      <p>{post.content}</p>
+    </main>
+  )
+}
+// 这段代码的 增量静态再生 (ISR) 工作原理
+- 在 `next build` 期间，生成所有已知的博客文章 (本示例中有 25 篇)
+- 对这些页面的所有请求 (例如 `/blog/1`) 都被缓存并立即响应
+- 60 秒过后，下一个请求仍然会显示缓存的 (陈旧的) 页面
+- 缓存失效，并在后台开始生成页面的新版本
+- 一旦成功生成，Next.js 将显示并缓存更新后的页面
+- 如果请求 `/blog/26`，Next.js 将按需生成并缓存这个页面
+```
+
+- 增强 fetch：在 src/app 下的组件可以直接对数据获取，并且可以通过`next.revalidate`选项来实现增量静态再生（ISR），方便控制数据的更新频率
+
+#### 13.x 以下
 
 默认情况下，Nextjs 会预渲染每个 page（也就是 **预先为每个 page 生成 HTML 文件**，而不是由 **客户端 js** 来生成 - **所以下面说的方法都是在「服务端」执行的，都不会被打包进 js bundle 里面**
 
@@ -112,13 +167,19 @@ export default Blog
 
 #### 五、API Routes - 在 Nextjs 中创建后端 API 的方式
 
-- 原理：Nextjs 的路由系统 API Routes，文件名就是路由路径的一部分
-    - 客户端向服务端发起这个路径的请求时，Nextjs 就自动调取这个文件来处理请求
-- 语法：文件中导出一个默认函数，接收两个参数
-    - req - 请求对象，包含方法、头部信息、查询参数、请求体等
-    - res - 响应对象，可以设置请求状态码、头部信息、响应体等
-- 迭代：采用 `src/app` 的路由方式后，API Routes 的文件也从 `pages/api` 转移到 `src/app/api`
-    - 常见：`src/app/api/user/route.js` 定义`api/user/` 相关路由
+13.x 以上的版本 pages/api/* API 路由已被 route.js (路由处理程序) 特殊文件替代
+
+
+
+原理：Nextjs 的路由系统 API Routes，文件名就是路由路径的一部分
+- 客户端向服务端发起这个路径的请求时，Nextjs 就自动调取这个文件来处理请求
+
+语法：文件中导出一个默认函数，接收两个参数
+- req - 请求对象，包含方法、头部信息、查询参数、请求体等
+- res - 响应对象，可以设置请求状态码、头部信息、响应体等
+
+迭代：采用 `src/app` 的路由方式后，API Routes 的文件也从 `pages/api` 转移到 `src/app/api`
+- 常见：`src/app/api/user/route.js` 定义`api/user/` 相关路由
 
 ```js
 export default function handler(req, res) {
