--- a/_posts/css相关内容/2021-06-26-BFC特点、触发、存在解决的问题.md
+++ b/_posts/css相关内容/2021-06-26-BFC特点、触发、存在解决的问题.md
@@ -9,7 +9,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -28,6 +28,8 @@ typora-root-url: ..
     - 每个元素的margin box的左边， 与包含块border box的左边相接触，即使浮动模块也是如此
 
 - ③ 独立容器：BFC就是页面上的一个 **隔离的独立容器**，容器里面的子元素**不会影响到外面的元素**，反之亦然
+
+- ④ 计算 BFC 的高度时，**浮动元素也参与其中**：这是解决高度塌陷问题的关键
 
 常见问题：**外边距折叠**
 
