--- a/_posts/算法、刷题/2021-06-05-[141 链表]. 环形链表.md
+++ b/_posts/算法、刷题/2021-06-05-[141 链表]. 环形链表.md
@@ -8,16 +8,50 @@ header-img:
 catalog: true
 tags:
     - < 算法题 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 ## 链表 141. 环形链表
 
+总结：
+
+- ①最基础的方法：双指针循环（性能差）
+- ②投机法：Json.stringify(head)，利用该序列化方法自带的「有互相引用就报错」
+- ③给链表加个 tag【最优】：给每个节点加标记
+- ④利用 set 作为哈希表
+
+```js
+function circleTag3(head) {
+    while(head) {
+        if(head.tag) {
+            return true;
+        }
+        head.tag = true;
+        head = head.next;
+    }
+    return false
+}
+function circleHash4(head) {
+    let set = new WeakSet();
+    while(head) {
+        if(set.has(head)) {
+            return true;
+        }
+        set.add(head);
+        head = head.next;
+    }
+    return false
+}
+```
+
+
+
 #### 力扣  141. 环形链表
 
  给定一个链表，判断链表中是否有环。
 
-![image-20210605194914137](/../img/assets_2019/image-20210605194914137.png)
+如果链表中有某个节点，可以通过连续跟踪 `next` 指针再次到达，则链表中存在环。 为了表示给定链表中的环，评测系统内部使用整数 `pos` 来表示链表尾连接到链表中的位置（索引从 0 开始）。**注意：`pos` 不作为参数进行传递** 。仅仅是为了标识链表的实际情况。
 
 **进阶：**
 
@@ -29,26 +63,46 @@ typora-root-url: ..
 
 ```js
 var hasCycle = function(head) {
-  if (head === null || head.next === null) {
-    return false;
-  }
-  let circle = false;
-  // 用两个数组存储当前节点和下一个节点的值
-  let arr = [head.val];
-  let arrNext = [head.next.val];
-  // 遍历链表每一项，判断是否和之前的节点相同
-  for(let i = head.next; i.next !== null && !circle; i = i.next) {
-    // 在 arr 存在且 arr 和 arrNext 的下标相等
-    if (arr.includes(i.val) && (arr.indexOf(i.val) === arrNext.indexOf(i.next.val))) {
-      circle = true;
-      return circle;
+    if (head === null || head.next === null) {
+        return false;
     }
-    arr.push(i.val);
-    arrNext.push(i.next.val);
-  }
-  return circle
+    let circle = false;
+    let arr = [head.val]; // 用两个数组存储当前节点和下一个节点的值
+    let arrNext = [head.next.val];
+    // 遍历链表每一项，判断是否和之前的节点相同
+    for(let i = head.next; i.next !== null && !circle; i = i.next) {
+        // 在 arr 存在且 arr 和 arrNext 的下标相等
+        if (arr.includes(i.val) && (arr.indexOf(i.val) === arrNext.indexOf(i.next.val))) {
+            circle = true;
+            return circle;
+        }
+        arr.push(i.val);
+        arrNext.push(i.next.val);
+    }
+    return circle
 }
 ```
+
+```js
+// 两个指针，但是性能太差
+var hasCycle = function (head) {
+    let cursor1 = head;
+    let cursor2 = head.next;
+    if (!cursor1 || !cursor2) { return false }
+    while (cursor1) {
+        while (cursor2) {
+            if (cursor2.value === cursor1.value) {
+                return true
+            }
+            cursor2 = cursor2.next;
+        }
+        cursor1 = cursor1.next;
+    }
+    return false
+};
+```
+
+
 
 - 2、我觉得有点神奇的/投机的方法
 
