--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -7,7 +7,7 @@ author:
 header-img: 
 catalog: true
 tags:
-    - < LTN1 >
+    - < 面试题整理 >
 typora-root-url: ..
 ---
 
@@ -82,3 +82,15 @@ J-Table
 Next_Pro
 
 -	日报 事项记录 前后端+数据库
+
+##### 2025.1.22 进展
+
+- 买域名 codingwithalice.top + 买 轻量应用服务器(4个月，得到 ICP 备案资格，并提交备案)
+
+- 两个项目分工：一个专门梳理 LTN 盒子；一个记录生活
+
+<img src="/img/assets_2025/image-20250122165531204.png" alt="image-20250122165531204" style="zoom:40%;" />
+
+##### 2025.1.23 进展
+
+- J-Table：展示周期 + 切换LTN/all 展示
