--- a/_posts/Node/2025-01-12-Nextjs 学习笔记.md
+++ b/_posts/Node/2025-01-12-Nextjs 学习笔记.md
@@ -25,7 +25,12 @@ typora-root-url: ..
 - src/app 目录下所有页面默认是 服务器组件，需要定义 客户端组件 时在顶部添加 “use client”
 - 3、自定义共享布局、样式：src/app/layout.tsx、src/app/global.css
 - 4、自动按照路由进行代码分割
-- 5、预渲染之前使用的 getStaticProps、getStaticPaths、getServerSideProps 已被 generateStaticParams + fetch 替代  -  增量静态再生（ISR）
+- 5、预渲染
+    - SSG 静态页面生成：getStaticPaths 被改为 generateStaticParams + revalidate - 在构建时生成 HTML + `export const revalidate` 增量静态再生
+        - 增量静态再生 (ISR)：运行时 生成或更新 静态页面的能力，能更新动态内容而无需重新构建 - revalidate 配置页面的「重新验证时间」，到点儿后在运行时生成页面，实现静态页面的增量更新
+
+    - SSR 服务端渲染：getServerSideProps - 每次请求时在服务端运行得到「html并嵌入拉取到的动态数据」 -> 返回需要的 HTML + 所需的js代码
+
 - 6、API Router 
 
 
