LTN①④ 移除对应 LTN Tag，统一数据库操作管理 LTN题库

--- a/_posts/2024-12-25-LTN做题.md
+++ b/_posts/2024-12-25-LTN做题.md
@@ -41,9 +41,9 @@ typora-root-url: ..
 
 
 
-> LTN①④ - 2025.1.20开始
+> LTN①④ - 2025.1.20开始 12h
 
-LTN1  - 43题
+LTN1  - 43题 8h33m
 
 ✅2019.10 两栏，左边固定，右边自适应的布局
 ✅2019.10 三栏，两边固定，中间自适应
