移除所有 LTN Tag，统一数据库操作管理 LTN题库

--- a/_posts/浏览器原理相关内容/2021-07-01-前端路由的两种模式.md
+++ b/_posts/浏览器原理相关内容/2021-07-01-前端路由的两种模式.md
@@ -8,7 +8,6 @@ header-img:
 catalog: true
 tags:
     - < 浏览器原理 >
-    - < LTN3 >
 typora-root-url: ..
 ---
 
@@ -34,12 +33,12 @@ typora-root-url: ..
 
 ```js
 history.pushState(null, null, '/page1');
-// URL 被改为 http://example.com/page1
+// URL 被改为 http://example.com/page1 - 它允许你修改浏览器的历史记录而无需重新加载页面
 ```
 
 - 核心方法： history.pushState()、 history.replaceState() 、history.popstate() 
     - 不会向服务器发起请求，也不会更新整个页面
     - 会更新 地址栏 URL + 历史记录 + 配合动态更新页面 + 触发 popState 事件
-- 特点：，**服务器会完整接收到 URL 请求**，需要服务端响应
+- 特点：客户端监听 popstate 事件，**服务器会完整接收到 URL 请求**，需要服务端响应
 - 后退：基于已有的 `back` 、 `forward` 、`go` 方法，对历史记录栈进行修改
 - 监听变化：`history.popState()` 
