add: sequelize 处理 Date 问题

--- a/_posts/2024-12-26-项目进展.md
+++ b/_posts/2024-12-26-项目进展.md
@@ -94,3 +94,16 @@ Next_Pro
 ##### 2025.1.23 进展
 
 - J-Table：展示周期 + 切换LTN/all 展示
+
+##### 2025.1.25 进展
+
+- 清理博客和印象笔记中的「LTN题目」管理Tag 和列表
+- J-Table：新增添加 Box 弹窗 + 统一管理所有题目和周期
+
+##### 2025.1.26
+
+- Next_Pro 每日数据 接口+展示
+
+##### 2025.1.27
+
+- Next_Pro 周报 查询 + 落表 + 展示
