add: sequelize 怎么写关联表的查询

--- a/_posts/2025-01-26-LTN①⑤.md
+++ b/_posts/2025-01-26-LTN①⑤.md
@@ -15,35 +15,9 @@ typora-root-url: ..
 
 # LTN做题
 
-> ①⑤ 74题 2025.1.27  - 2.5 开始
+> ①⑤ 74题 2025.1.27  - 2.4 开始
 
-1.27 - LTN1 - 8题
 
-作业2：支持迭代器的原生语言特性有哪些？
-作业43：TED 怎么提升自信
-作业42：TED 如何和大脑正确交流沟通
-作业39：shim 和 polyfill 区别
-作业6：new操作符实例化一个对象的过程
-2019.07 为什么要清除浮动？怎么清除浮动？
-2021.06 CSS 选择器 - 权重/匹配方式
-作业38：部署两个项目的大致情况
-
-1.28 - LTN1 - 2题
-
-作业20：浏览器打开一个 URL 发生了什么
-2021.09 Object属性排序、与Map的区别
-
-1.29 - LTN1 - 4题
-
-作业66：React如何处理错误
-作业81：Redux 核心是什么？reducer、action、dispatch、store、RTK 怎么理解？简单写一个 redux 使用
-作业83：INNER JOIN、LEFT OUTER JOIN、RIGHT OUTER JOIN 有什么区别?UNION作用是什么？怎么封装一个 SQL 查询
-作业84：path.join()和path.resolve()的区别？process.cwd()和__dirname的区别？
-
-1.30 - LTN1 - 2题
-
-作业82：写一个复杂的 SQL： ①只返回某列不同的值，相同的忽略 ②拼接A列和B列为字符串后输出 ③将某一列转换为大写输出 ④计算某列行数，一个包含null的个数，一个不包含null个数 ⑤求和、求最大、求最小、求平均某列的值 ⑥给表起别名 ⑦查询条件涵盖 id为1,同时price大于10，或者是NULL，或者是 5-10之间，或者是 1或2，或者年份为2025 ⑧按照某列分组 ⑨按照某列排序(降序)
-2023.07 clickhouse、mysql、mongodb异同
 
 1.31 - LTN1 - 8题
 
@@ -95,14 +69,24 @@ LTN2
 2021.06 跨页面通信
 2019.07 数组去重（算法整理）
 2021.07 柯里化函数实现
+
+
+
+
+1.30 - LTN1 - 2题
+
+✅作业82：写一个复杂的 SQL： ①只返回某列不同的值，相同的忽略 ②拼接A列和B列为字符串后输出 ③将某一列转换为大写输出 ④计算某列行数，一个包含null的个数，一个不包含null个数 ⑤求和、求最大、求最小、求平均某列的值 ⑥给表起别名 ⑦查询条件涵盖 id为1,同时price大于10，或者是NULL，或者是 5-10之间，或者是 1或2，或者年份为2025 ⑧按照某列分组 ⑨按照某列排序(降序)
+✅2023.07 clickhouse、mysql、mongodb异同
+
 LTN3
-作业3：迭代器原理
-作业41：TED 如何解决焦虑
+❌作业3：迭代器原理
+✅作业41：TED 如何解决焦虑
+
 LTN4
-作业4：什么是生成器？有什么作用？
-作业18：多进程浏览器会开启几个进程（5个点）？相同站点的页面，可以复用么？
-作业19：发起请求后，得到 301，有效信息是哪些？
-作业21：下面这段代码输出结果是什么？为什么 
+✅作业4：什么是生成器？有什么作用？
+✅作业18：多进程浏览器会开启几个进程（5个点）？相同站点的页面，可以复用么？
+✅作业19：发起请求后，得到 301，有效信息是哪些？
+✅作业21：下面这段代码输出结果是什么？为什么 
 
 ```js
 console.log(11, fun1);
@@ -111,7 +95,7 @@ var fun1 = 1;
 console.log(22, fun1)
 ```
 
-作业22：分别输出什么？
+✅作业22：分别输出什么？
 
  ```js
 function foo(){
@@ -131,7 +115,7 @@ function foo(){
 foo();
  ```
 
-作业24：写出事件循环系统的流程图，常见宏任务、微任务有哪些。并写出几个常见题目的输出结果
+❌作业24：写出事件循环系统的流程图，常见宏任务、微任务有哪些。并写出几个常见题目的输出结果
 
  ```js
 Promise.resolve().then(() => {
@@ -178,8 +162,8 @@ new Promise(function(resolve) {
 console.log('script end');
  ```
 
-作业27：写一个 sleep 函数
-作业28：写出 js 按什么顺序执行
+✅作业27：写一个 sleep 函数
+✅作业28：写出 js 按什么顺序执行
 
 ```html
 <script src='./a.js' defer></script>
@@ -203,13 +187,355 @@ console.log('script end');
             console.log('compute finished');
         </script>
     </div>
-
 </body>
 ```
 
-作业35：写出HTPPS和HTTP的差异？对称加密和非对称加密有什么异同？混合加密是怎么做的？
-2019.07 css中的动画特性可以用js实现，那为什么还要用css来实现？
-2021.06 子盒子在父盒子中水平垂直居中有几种方法？
-2024.10 第十一章 期约与异步函数 小结
-2019.06 随机给一个盒子添加一个十六进制的颜色
+✅作业35：写出HTPPS和HTTP的差异？对称加密和非对称加密有什么异同？混合加密是怎么做的？
+✅2019.07 css中的动画特性可以用js实现，那为什么还要用css来实现？
+❌2021.06 子盒子在父盒子中水平垂直居中有几种方法？
+✅2024.10 第十一章 期约与异步函数 小结
+✅2019.06 随机给一个盒子添加一个十六进制的颜色
+
+```js
+// 2019.06 随机给一个盒子添加一个十六进制的颜色
+function addColor() {
+    let res = '#';
+    const arr = ['0', ...,'9','a', ... 'f'];
+    Array(6).forEach(it => {
+        const index = Math.floor(Math.random() * 16);
+        res += arr[index];
+    })
+    return res;
+}
+```
+
+```js
+// 2021.06 子盒子在父盒子中水平垂直居中有几种方法？
+- 第一遍 2025.1.30 -
+①flex .father { display: flex; justify-content: center; align-items: center; }
+② .son { position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto;  }
+③ .son { position: absolute; transform: translate(-50%, -50%); left: 50%; top: 50%; }
+④ .son { display: table-cell; text-align: center; vertial-align: middle; } ❌ // 1、不是给子元素 添加 table-cell，这个方法的核心是把 父盒子 设置为 table-cell，使得另外两个属性生效 - 而子盒子作为行内块类型，垂直、居中 .father { display: table-cell; text-align: center; vertical-align: middle; } .son { display: inline-block; }
+```
+
+```js
+// 2019.07 css中的动画特性可以用js实现，那为什么还要用css来实现？
+- 第一遍 2025.1.30 -
+js 实现动画： 占用主线程执行；低版本浏览器可能需要写兼容性代码；
+css 实现动画： 有些 transform、opacity 只需要合成线程，并且可以开启 GPU 加速；加载完 css 就可以开始渲染动画，不用等 js 执行；优雅降级
+⭐️ // 避免回流重绘 + 自然降级 + 硬件GPU加速 + 预扫描加载快
+```
+
+```js
+// 作业35：写出HTPPS和HTTP的差异？对称加密和非对称加密有什么异同？混合加密是怎么做的？
+- 第一遍 2025.1.30 -
+HTTPS = HTTP + SSL/TLS，把 TCP 层改为 SSL/TLS 层
+对称加密 - 只有一个密钥用于加密、解密
+非对称加密 - 公钥可以发放，客户端加密使用公钥，私钥用于解密，只有服务端独有
+混合加密 - 使用非对称加密商讨出对称加密使用的密钥 ⭐️ // 协商
+```
+
+```js
+// 作业28：写出 js 按什么顺序执行
+- 第一遍 2025.1.30 -
+b.js - event start - compute finished - a.js - DOMContentLoaded finish - onload finish
+```
+
+```js
+// 作业27：写一个 sleep 函数
+- 第一遍 2025.1.30 -
+async function sleep(delay){
+    return new Promise((resolve) => setTimeout(() => resolve(), delay));
+    ⭐️ // 不用写 async + setTimeout 可以简写成 setTimout(resolve, delay)
+}
+await sleep(100);
+```
+
+```js
+// 作业24：写出事件循环系统的流程图，常见宏任务、微任务有哪些。并写出几个常见题目的输出结果
+- 第一遍 2025.1.30 -
+时间循环系统
+事件：同步类型 - 主线程执行 - 执行完成，清理执行栈之前，从事件队列中获取事件执行 - 所有微任务执行完毕后，进入下一个事件循环
+	 异步类型 - Event Table - 将回调函数投入事件队列 ⭐️ // Event Queue
+⭐️ // 等异步任务有了结果，将回调函数投入事件队列
+宏任务 ： UI渲染、IO下载、js代码、setTimeout/setTimeInterval ⭐️ // IO表示下载和交互
+微任务： MutationObserver、Promise.then、async/await
+1 5 2 6 3 4 ❌ // 125364 
+script start - async1 start - async2 - promise1 - script end
+- async1 end - promise2 - promise3 - setTimeout
+```
+
+```js
+// 作业22：分别输出什么？
+- 第一遍 2025.1.30 -
+1 3 2 4 error
+```
+
+```js
+// 作业21：下面这段代码输出结果是什么？为什么 
+- 第一遍 2025.1.30 -
+11 function
+22 1
+执行上下文中，函数内先创建 auguments、再函数提升、最后变量提升
+```
+
+```js
+// 作业19：发起请求后，得到 301，有效信息是哪些？
+- 第一遍 2025.1.30 -
+Location 重新导航
+```
+
+```js
+// 作业18：多进程浏览器会开启几个进程（5个点）？相同站点的页面，可以复用么？
+- 第一遍 2025.1.30 -
+浏览器进程、渲染进程*n、插件进程*n、网络进程、GPU进程
+同协议、同域名、同端口 可以复用当前渲染进程
+```
+
+```js
+// 作业4：什么是生成器？有什么作用？
+- 第一遍 2025.1.30 -
+生成器：暂停、恢复代码执行，* 声明，yield next 
+自定义可迭代对象、模拟协程
+```
+
+```js
+// 2023.07 clickhouse、mysql、mongodb异同
+- 第二遍 2025.1.30 -
+clickhouse: 列式数据库，支持异步操作，读写性能都好，适合大型动态场景 ⭐️ // 高吞吐、低延迟
+mysql：关联型数据库，支持事务操作，读写性能好，在并发操作时，会出现数据一致性问题
+mongodb：文档型数据库，存储半结构化/非结构化数据，读的性能好，写的性能弱，在异步操作时，有数据一致性问题 ⭐️ // 分布式场景下一致性问题
+- 第一遍 2025.1.22 -
+```
+
+```js
+// 作业82：写一个复杂的 SQL： ①只返回某列不同的值，相同的忽略 ②拼接A列和B列为字符串后输出 ③将某一列转换为大写输出 ④计算某列行数，一个包含null的个数，一个不包含null个数 ⑤求和、求最大、求最小、求平均某列的值 ⑥给表起别名 ⑦查询条件涵盖 id为1,同时price大于10，或者是NULL，或者是 5-10之间，或者是 1或2，或者年份为2025 ⑧按照某列分组 ⑨按照某列排序(降序)
+- 第二遍 2025.1.30 -
+SELECT DISTINCT t.name, 
+    CONCAT('(', t.interval, ')') AS interval, 
+    UPPER(t.type) AS type,
+    COUNT(*) AS with_null,
+	COUNT(t.name) AS without_null,
+    AVG(t.gap) AS avg // -- MAX MIN SUM
+FROM Times as t, Issues as i
+WHERE t.id = 1 AND
+	(t.price > 10
+    OR it.price IS NULL
+    OR it.price BETWEEN 5 AND 10,
+    OR it.price in (1,2),
+    OR YEAR(it.date) = 2025)
+GROUP BY t.date
+SORT BY t.date
+- 第一遍 2025.1.23 -
+```
+
+```js
+// 作业3：迭代器原理
+- 第二遍 2025.1.30 -
+提供暂停和恢复代码执行能力，[Symbol.iterater] 默认迭代器
+yield 暂停，next 恢复执行 {done, value}
+❌ // 迭代器使用 next 方法在可迭代对象中遍历数据
+- 第一遍 2024.12.25 -
+```
+
+```js
+// 作业41：TED 如何解决焦虑
+- 第二遍 2025.1.30 -
+1、列出所有可以解决问题的方案，去做 do it badly ⭐️ // anything worth doing worth doing badly the first time
+2、给自己一些同情 ⭐️ // 我们不会和天天批评自己的人交朋友，我们也不要做自己这样的朋友 
+3、找到意义 ⭐️ // 即使别人不知道，自己一定要认可自己的行为
+- 第一遍 2024.12.25 -
+```
+
+1.29 - LTN1 - 4题
+
+❌作业66：React如何处理错误
+✅作业81：Redux 核心是什么？reducer、action、dispatch、store、RTK 怎么理解？简单写一个 redux 使用
+✅作业83：INNER JOIN、LEFT OUTER JOIN、RIGHT OUTER JOIN 有什么区别?UNION作用是什么？怎么封装一个 SQL 查询
+✅作业84：path.join()和path.resolve()的区别？process.cwd()和__dirname的区别？
+
+```js
+// 作业84：path.join()和path.resolve()的区别？process.cwd()和__dirname的区别？
+- 第二遍 2025.1.29 -
+path.join() 纯拼接
+path.resolve() 拼接绝对路径 / ⭐️ // 绝对路径解析
+process.cwd() 获取 node 执行环境的当前目录
+__dirname 当前文件的所处目录
+- 第一遍 2025.1.22 -
+```
+
+```js
+// 作业83：INNER JOIN、LEFT OUTER JOIN、RIGHT OUTER JOIN 有什么区别?UNION作用是什么？怎么封装一个 SQL 查询
+- 第二遍 2025.1.29 -
+INNER JOIN 内联查询 取AB表都满足条件的行，即交集 ⭐️ // 内连接 
+LEFT OUTER JOIN 左表查询 取左表满足条件的行及右表补充的行
+RIGHT OUTER JOIN 右表查询 取右表满足条件的行及左表补充的行
+UNION 连接两次查询 ⭐️ // 拼接
+封装 CREATE VIEW mySearch AS SELECT ...
+下次使用的时候直接 FROM mySearch
+- 第一遍 2025.1.22 -
+```
+
+```js
+// 作业81：Redux 核心是什么？reducer、action、dispatch、store、RTK 怎么理解？简单写一个 redux 使用
+- 第二遍 2025.1.29 -
+Redux 将全局状态保存在 store 对象树中，通过 action 才能 dispatch 改变 store ⭐️ // 改变 state
+RTK - Redux tollkit 官方推荐依赖
+reducer: 使用 旧的state 和 action 计算得到 新的state
+import { crateStore } from 'redux';
+const reducer = (oldState = { value: 1 }, action) => { 
+    if(action.type === 'add') { return { value: oldState.value + 1 } } 
+}
+const store = createStore(reducer);
+store.dispatch({ type: 'add' });
+store.subscribe(() => { console.log(store.getState()) })
+- 第一遍 2025.1.22 -
+```
+
+```js
+// 作业66：React如何处理错误
+- 第六遍 2025.1.29 -
+React 提供两个函数处理错误 static getStateFromError()、componentDidCatch，用于捕获 
+❌ // 1、静态函数名称错了 getDerivedStateFromError
+render+commit 阶段的错误，阻止错误蔓延到整个应用影响 UI 展示
+几个情况不会捕获：异步、回调、ssr、错误边界内部
+class Boundaries extends React.Component{
+    constructor() {
+        super(props);
+        this.state = { hasError: false }
+    }
+    static getStateFromError() { ❌ // 2、getDerivedStateFromError
+        return { hasError: true }
+    }
+    componentDidCatch(e, info) {
+        console.log(e)
+    }
+    render() {
+        if(this.state.hasError) {
+            return <p> There are errs. </p>
+        } else {
+            return this.props.children;
+        }
+    }
+}
+- 第五遍 2025.1.22 -
+- 第四遍 2025.1.18 -
+```
+
+1.28 - LTN1 - 2题
+
+✅作业20：浏览器打开一个 URL 发生了什么
+✅2021.09 Object属性排序、与Map的区别
+
+```js
+// 作业20：浏览器打开一个 URL 发生了什么
+- 第三遍 1.28 -
+1、浏览器进程 UI线程：将用户输入内容或者链接转换成 URL
+2、通过 IPC 协议传递给网络进程
+网络进程：① 查询本地缓存，有缓存且有效则 强缓存生效
+	②无缓存/有缓存但已过期，DNS 解析得到 IP
+    ③TCP 队列排队，三次握手，进行连接
+    ④组装请求：请求头、cookie 等信息
+    ⑤发起请求
+响应 状态码：301、302 重定向，获取响应头中的 Location 进行重新跳转
+		   304 Not Modified，使用缓存，并刷新本地缓存时间
+           200 响应类型是 os-stream 下载类型，直接触发下载，停止导航
+           	   响应类型是 html，和浏览器进程建立管道，边下载边解析
+3、渲染进程
+①分为主线程、合成线程、预解析线程，解析 html 时，开启预扫描线程扫描 js、css，提前下载
+②管道传输完毕后，通知浏览器进程，更新 页面、前进后退、url、安全锁
+③下载完成，解析完成之前 - 解析白屏
+主线程：解析DOM（DOM树） - 计算样式表 - 布局树 - 分层树 - 绘制（指令列表
+合成线程： - 栅格化（图块合成位图）[会开启 GPU 加速]
+浏览器进程 UI线程：- 合成（帧
+- 第二遍 1.20 -
+❌ // 1、IPC 协议名错了 2、有缓存但缓存失效也继续请求 3、请求的响应，应该先判断状态码再判断类型
+```
+
+```js
+// 2021.09 Object属性排序、与Map的区别
+- 第三遍 1.28 -
+正整数 > 字符串 > 负数 > 浮点数 > Symbol
+区别：有序；属性可以是任意类型；m.size()；大数据，占用内存小，增删快；可迭代对象
+- 第二遍 1.21 -
+```
+
+
+
+1.27 - LTN1 - 8题
+
+✅作业2：支持迭代器的原生语言特性有哪些？
+✅作业43：TED 怎么提升自信
+✅作业42：TED 如何和大脑正确交流沟通
+✅作业39：shim 和 polyfill 区别
+❌作业6：new操作符实例化一个对象的过程
+✅2019.07 为什么要清除浮动？怎么清除浮动？
+✅2021.06 CSS 选择器 - 权重/匹配方式
+
+```js
+// 2021.06 CSS 选择器 - 权重/匹配方式
+- 第二遍 1.28 -
+!important > 行内 > 内联、外联（只和加载顺序有关
+#id > .red a[href] :hover LVHA > div ::after > *
+- 第一遍 1.20 -
+```
+
+```js
+// 2019.07 为什么要清除浮动？怎么清除浮动？
+- 第二遍 1.28 -
+对于浮动元素，块级元素把它当做不存在；行内块元素，环绕布局
+父组件中的子组件浮动时，会造成高度塌陷，父级元素的背景无法撑开，padding和border展示异常
+清除浮动：①给父级元素添加高度 ②父盒子里最后添加一个盒子 .box {clear:both} ③父盒子添加伪元素 .father::before{ content:''; display: block; clear: both; } ④BFC .father{ overflow: hidden } - BFC 的盒子计算高度时包含浮动元素
+- 第一遍 1.20 -
+❌ // 1、写错了：是给父元素添加BFC + 父盒子设置高度（宽度不行
+```
+
+```js
+// 作业6：new操作符实例化一个对象的过程
+- 第二遍 1.28 -
+function newFun () {
+    let obj = new Object();
+    const ctor = [].shift.call(arguments);
+    obj.__proto__ = ctor; ❌ // 1、不是构造函数，是构造函数的原型对象 obj.__proto__ = ctor.prototype;
+    const res = ctor.apply(obj, arguments);
+	return typeof res === 'object' ? res : obj;
+}
+- 第一遍 1.20 -
+❌ // 1、不是调整 constructor 的指向
+```
+
+```js
+// 作业39：shim 和 polyfill 区别
+- 第二遍 1.28 -
+shim：垫片，提供新API，使用原生功能实现，处理兼容问题 ⭐️ // 优雅降级
+polyfill：补丁，实现浏览器原生功能，不提供新的API ⭐️ // 实现原生 API 中缺少的功能
+- 第一遍 1.20 -
+```
+
+```js
+// 作业42：TED 如何和大脑正确交流沟通
+- 第二遍 1.28 -
+1、I like it, I want it, I've chosen it!
+2、Make it familiar!
+大脑只会响应我们给它的语言 + 图像（具体的）；大脑天然追寻快乐，所以把想做的事情绑定到巨大的快乐中，不想做的事情、停留在原地，绑定痛苦；大脑喜欢熟悉的东西，做得越多越能够坚持
+- 第一遍 1.20 -
+```
+
+```js
+// 作业43：TED 怎么提升自信
+- 第二遍 1.28 -
+1、repetition！repetition！repetition！
+2、不要批评自己，鼓励、表扬做得好的地方 - 引导自己
+3、用自己的语言解释世界
+- 第一遍 1.20 -
+```
+
+```js
+// 作业2：支持迭代器的原生语言特性有哪些？
+- 第三遍 1.28 -
+Array.from  ...扩展运算符  数组解构  for...of  new Set  new Map  yield *  Promise.all/race
+- 第二遍 1.25 -
+- 第一遍 1.20 -
+❌ // 1、少写了：yield * 操作符 - 只能在生成器中使用；不是对象解构，是「数组解构」
+```
 
